Bug 914644 - HTTP cache v2: failure of test_doomentry.js, proper sync when dooming after open, r=michal